# zahuyach

./: .gitmessage  Cargo.toml  LICENSE  README.md  README_RU.md
.githooks/: commit-msg
.github/workflows/: README.md  manual-release.yml  pr.yml  release.yml
scripts/: check-publish.sh
src/: cli.rs  config.rs  content.rs  error.rs  generator.rs  lib.rs  main.rs
src/commands/: build.rs  init.rs  serve.rs
src/templates/: mod.rs
src/templates/basic/: config.toml
src/templates/basic/content/: about-zahuyach.md  hello-world.md  welcome.md
src/templates/basic/static/css/: custom.css  main.css
src/templates/basic/static/js/: app.js  theme.js
src/templates/basic/templates/: 404.html  about.html  archive.html  base.html  categories_sidebar.html  categories_tree.html  index.html  post.html  posts_list.html  search_modal.html  sidebar.html  tag.html  tags.html
tests/: cli_tests.rs
