[package]
name = "zahuyach"
version = "0.1.0"
edition = "2024"
description = "Static site generator for blogs written in Rust"
license = "MIT"
repository = "https://github.com/b4rgut/zahuyach"
readme = "README.md"
keywords = ["static-site-generator", "blog", "markdown", "cli"]
categories = ["command-line-utilities", "web-programming"]
authors = ["Aleksey Kalsin <aleksey@kalsin.pro>"]

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
dialoguer = "0.11.0"
rstest = "0.25.0"
rust-embed = "8.7.2"

[dev-dependencies]
tempfile = "3.20.0"

[lints.clippy]
# Включаем все группы линтов с правильными приоритетами
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
