[package]
name = "zahuyach"
version = "0.5.6"
edition = "2024"
description = "Static site generator for blogs written in Rust"
license = "MIT"
repository = "https://github.com/b4rgut/zahuyach"
readme = "README.md"
keywords = ["ssg", "blog", "md", "cli"]
categories = ["command-line-utilities", "web-programming"]
authors = ["Aleksey Kalsin <aleksey@kalsin.pro>"]

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
handlebars = "6.3.2"
pulldown-cmark = "0.13.0"
rstest = "0.25.0"
rust-embed = "8.7.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
toml = "0.8.23"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.20.0"

[lints.clippy]
# Включаем все группы линтов с правильными приоритетами
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
